[package]
name = "tubing"
version = "0.1.0"
authors = ["manito <wwwbjqcom@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
async-stream = "0.3"
atoi = "0.3.2"
bytes = "1"
structopt = "0.3.14"
tokio = { version = "1.1.0", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.13"
tracing-futures = { version = "0.2.3", features = ["tokio"] }
tracing-subscriber = "0.2.2"
mysql_common = "0.18"
byteorder="1"
sha1="0.6.0"
sha2="0.8.0"
chrono="0.4.11"
toml="0.5.6"
serde_derive="1.0.100"
reqwest = { version = "0.10", features = ["json"] }
num_cpus="1.13.0"


[MysqlBus.release]
debug= true


[dependencies.sqlparser]
git = "https://github.com/wwwbjqcom/mysql-sqlparse-rs.git"